syntax = "proto3";
package dysonprotocol.script.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "dysonprotocol.com/x/script/types";

// SendAuthorization allows the grantee to spend up to spend_limit coins from
// the granter's account.
message ExecAuthorization {
  option (cosmos_proto.message_added_in) = "dysonprotocol 2.0";
  option (cosmos_proto.implements_interface) =
      "cosmos.authz.v1beta1.Authorization";
  option (amino.name) = "dys/script/ExecAuthorization";

  // script_address is the address of the script that can be executed
  string script_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // function_names is a list of function names that can be called on this
  // script if empty, only the script itself can be run without a function call
  repeated string function_names = 2;
}
